--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -51,6 +51,17 @@
 
 # 07.Rmd ----
 
+@article{wang2008oct2,
+  title={OCT2 polymorphisms and in-vivo renal functional consequence: studies with metformin and cimetidine},
+  author={Wang, Zhi-Jun and Yin, Ophelia QP and Tomlinson, Brian and Chow, Moses SS},
+  journal={Pharmacogenetics and genomics},
+  volume={18},
+  number={7},
+  pages={637--645},
+  year={2008},
+  publisher={LWW}
+}
+
 @article{brouwer2013vitro,
   title={In vitro methods to support transporter evaluation in drug discovery and development},
   author={Brouwer, Kim LR and Keppler, Dietrich and Hoffmaster, Keith A and Bow, Daniel AJ and Cheng, Yaofeng and Lai, Yurong and Palm, Johan E and Stieger, Bruno and Evers, Raymond and International Transporter Consortium},
@@ -61,6 +72,7 @@
   year={2013},
   publisher={Wiley Online Library}
 }
+
 @article{burt2016metformin,
   title={Metformin and cimetidine: Physiologically based pharmacokinetic modelling to investigate transporter mediated drug--drug interactions},
   author={Burt, HJ and Neuhoff, Sybille and Almond, L and Gaohua, L and Harwood, MD and Jamei, Masoud and Rostami-Hodjegan, A and Tucker, GT and Rowland-Yeo, K},
