--- a/pharmapk.tex
+++ b/pharmapk.tex
@@ -322,6 +322,8 @@
 \chapter*{머리말}\label{uxba38uxb9acuxb9d0}}
 
 
+\href{https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf}{}
+
 \normalsize
 
 이 책은 제약·바이오 업계의 신약 연구자들이 약동학(pharmacokinetics)을 이해하는 것을 돕기 위해 만들어졌습니다.\index{약동학}
@@ -2168,7 +2170,10 @@ CL\textsubscript{int}), 이를 통해 f\textsubscript{m}을 계산할 수 있다
 \hypertarget{uxd6c4uxbcf4-uxbb3cuxc9c8uxc758-uxb300uxc0ac-uxc5b5uxc81c-uxd2b9uxc131-uxd3c9uxac00}{%
 \chapter{후보 물질의 대사 억제 특성 평가}\label{uxd6c4uxbcf4-uxbb3cuxc9c8uxc758-uxb300uxc0ac-uxc5b5uxc81c-uxd2b9uxc131-uxd3c9uxac00}}
 
+\Large\hfill
+
 이소진
+\normalsize
 
 \hypertarget{uxac1cuxc694}{%
 \section{개요}\label{uxac1cuxc694}}
@@ -2188,10 +2193,16 @@ study 시작에서부터 함께 탐색되는 것을 추천한다. 이와 같은 
 단게에서의 DDI 평가는 FDA 가이던스와 EMA 가이드 라인에서도 추천되어
 진다.
 
-\includegraphics[width=2.59167in,height=1.68983in]{./media/image1.emf}\includegraphics[width=2.70547in,height=1.69792in]{./media/image2.png}
+\begin{figure}
 
-그림 . Perpetrator(inhibitor 또는 inducer) 와 victim drug 병용투여 시의
-약물농도
+{\centering \includegraphics[width=1\linewidth]{media-05/image-1-2} 
+
+}
+
+\caption{Perpetrator(inhibitor 또는 inducer) 와 victim drug 병용투여 시의 약물농도}\label{fig:05-01}
+\end{figure}
+
+
 
 Victim (substrate) : Drug whose PK is affected
 Perpetrator : Drug that is affecting PK of victim
