--- a/index.Rmd
+++ b/index.Rmd
@@ -83,6 +83,8 @@ Sys.setenv(RSTUDIO_PDFLATEX = "latexmk")
 
 <!--`r if (knitr::is_html_output()) ' [<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" alt="표지" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)'`-->
 
+[<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)
+
 \normalsize
 
 이 책은 제약·바이오 업계의 신약 연구자들이 약동학(pharmacokinetics)을 이해하는 것을 돕기 위해 만들어졌습니다.\index{약동학}
