--- a/pharmapk.Rmd
+++ b/pharmapk.Rmd
@@ -83,6 +83,8 @@ Sys.setenv(RSTUDIO_PDFLATEX = "latexmk")
 
 <!--`r if (knitr::is_html_output()) ' [<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" alt="표지" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)'`-->
 
+[<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)
+
 \normalsize
 
 이 책은 제약·바이오 업계의 신약 연구자들이 약동학(pharmacokinetics)을 이해하는 것을 돕기 위해 만들어졌습니다.\index{약동학}
@@ -1426,10 +1428,11 @@ knitr::include_graphics('media-04/image29.png')
 
 <!--chapter:end:04.Rmd-->
 
-
 # 후보 물질의 대사 억제 특성 평가
 
+\Large\hfill
 이소진
+\normalsize
 
 ## 개요
 
@@ -1448,12 +1451,11 @@ study 시작에서부터 함께 탐색되는 것을 추천한다. 이와 같은 
 단게에서의 DDI 평가는 FDA 가이던스와 EMA 가이드 라인에서도 추천되어
 진다.
 
-![](./media/image1.emf){width="2.591666666666667in"
-height="1.6898272090988626in"}![](./media/image2.png){width="2.7054713473315837in"
-height="1.6979166666666667in"}
+```{r 05-01, fig.cap = "(ref:05-01)"}
+knitr::include_graphics('media-05/image-1-2.png')
+```
 
-그림 . Perpetrator(inhibitor 또는 inducer) 와 victim drug 병용투여 시의
-약물농도
+(ref:05-01) Perpetrator(inhibitor 또는 inducer) 와 victim drug 병용투여 시의 약물농도
 
 Victim (substrate) : Drug whose PK is affected
 Perpetrator : Drug that is affecting PK of victim
