--- a/02.Rmd
+++ b/02.Rmd
@@ -130,8 +130,10 @@ knitr::include_graphics('media-02/image6.png')
 그리고 아래와 같은 식을 이용하여 세포막 투과 계수 (P~app~, Apparent permeability coefficient) 및 Efflux ratio를 산출한다.
 
 \begin{equation}
+\begin{split}
 P_{app} = \frac{\frac{dQ}{dt}}{A \cdot C_0} \\
 Efflux\ ratio = \frac{P_{app (B to A)}}{P_{app (A to B)}}
+\end{split}
 (\#eq:eq02-02) 
 \end{equation}
 
@@ -240,8 +242,10 @@ P~app~ (A to B): permeability coefficient in apical to basolateral direction, P~
 투과도 평가 시 회수율은 다음의 수식에 따라 산출되며, 그 개념을 설명하자면 최초 약물을 처리한 시점부터 배양액을 취하여 약물의 농도를 분석하기까지 잔존하는 약물의 양이라고 할 수 있다.
 
 \begin{equation}
+\begin{split}
 \mathbf{Recovery\ }\left( \mathbf{\%} \right) = \frac{total\ compound\ in\ both\ of\ A/B\ sides\ at\ the\ end\ of\ experiment\ (nmol)}{initial\ compound\ present\ (nmol)}\  \times \ 100 \\
 A:\ apical,\ B:\ basolateral
+\end{split}
 (\#eq:eq02-03)
 \end{equation}
   
