--- a/homework/05-formula.Rmd
+++ b/homework/05-formula.Rmd
@@ -21,7 +21,7 @@ $$
 - Non-competitive
 
 $$
-v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S](\left(1+\frac{[I]}{K_i})\right)}
+v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S]\left(1+\frac{[I]}{K_i}\right)}
 $$
 
 \br
@@ -29,13 +29,13 @@ $$
 - Uncompetitive
 
 $$
-v=\frac{V_{max}[S]}{K_m+[S](\left(1+\frac{[I]}{K_i}\right)}
+v=\frac{V_{max}[S]}{K_m+[S]\left(1+\frac{[I]}{K_i}\right)}
 $$
 
 - Mixed
 
 $$
-v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S](\left(1+\frac{[I]}{aK_i}\right)}
+v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S]\left(1+\frac{[I]}{aK_i}\right)}
 $$
 
 \br
