--- a/02.Rmd
+++ b/02.Rmd
@@ -6,7 +6,7 @@
 
 ## 서론
 
-투과도 (Permeability)란 물질이 세포막을 통하여 수송되는 속도로서 정의된다. 
+투과도 (permeability)란 물질이 세포막을 통하여 수송되는 속도로서 정의된다. 
 경구 투여된 약물이 전신순환혈로 도달, 즉 흡수되기 위해서는 약물이 소화관 점막 상피세포막을 투과하는 과정을 반드시 거쳐야만 한다.
 위, 소장, 간을 거쳐 전신으로 흡수된 약물은 타겟 조직으로 도달한 후 체외로 배설되기까지 여러 이행 과정을 거치게 되는데, 이 때도 여러 생체막의 관문을 통과하게 된다. 
 따라서 투과도는 흡수, 분포, 대사, 배설 과정 전반에 걸쳐 영향을 주는 인자로서 약동학의 가장 기초적인 자료라 할 수 있다 (그림 \@ref(fig:02-01)).
@@ -28,7 +28,7 @@ knitr::include_graphics('media-01/image1.png')
 
 ### 막 투과 기전
 
-생체막은 단백질을 함유한 인지질 이중층 (phospholipid bilayer)으로 구성되어 있으며, 인지질 분자의 소수성 꼬리는 내측으로, 친수성 머리는 세포질 및 세포 외부로 향하도록 구성되어 있다 (그림 \@ref(fig:02-02)).
+생체막은 단백질을 함유한 인지질 이중층 (phospholipid bilayer)으로 구성되어 있으며, 인지질 분자의 소수성 꼬리는 안쪽으로, 친수성 머리는 세포질 및 세포 밖으로 향하도록 구성되어 있다 (그림 \@ref(fig:02-02)).
 
 ```{r 02-02, fig.cap = "(ref:02-02)"}
 knitr::include_graphics('media-02/image2.jpg')
