--- a/02.Rmd
+++ b/02.Rmd
@@ -137,13 +137,13 @@ Efflux\ ratio &= \frac{P_{app (B to A)}}{P_{app (A to B)}}
 (\#eq:eq02-02) 
 \end{equation}
 
-여기서 dQ/dt는 초기 약물수송속도 (initial transport rate, μmol/s), A는 well의 표면적 (the surface area of the monolayer, cm^2^), C~0~는 처리한 약물의 농도 (initial concentration in the donor chamber, μmol/cm^3^)를 의미한다.
+여기서 dQ/dt는 초기 약물수송속도 (initial transport rate, μmol/s), A는 well의 표면적(the surface area of the monolayer, cm^2^), C~0~는 처리한 약물의 농도(initial concentration in the donor chamber, μmol/cm^3^)를 의미한다.
 
-Caco-2 투과도 시험계에서는 약물의 수동수송 뿐만 아니라 능동수송 방식에 의한 막 투과도 행하여 지며, 내강막 (Apical membrane) 및 측저막 (Basolateral membrane) 간 양방향의 수송이 모두 일어난다. 또한 장에 많이 발현되어 있으며 약물의 흡수를 저해하는 P-glycoprotein (P-gp) 및 Breast cancer resistant protein (BCRP)와 같은 efflux transporter의 기질성 여부까지 판단할 수 있다 (기질인 경우 Efflux ratio \> 2).  그러나 세포 배양 시 3주 이상이 소요되고, 시험 1주일 전 antibiotics-free media로 배양하는 과정 중 contamination의 가능성도 있으며 시험 수행에 숙련된 기술이 필요하기 때문에 수행자나 기관에 따라 그 값의 편차가 심하다는 단점이 있다. 또한 Caco-2 세포주가 사람의 대장세포라 실제 약물의 흡수가 많이 이루어지는 소장과는 다소 차이가 있을 수 있다.
+Caco-2 투과도 시험계에서는 약물의 수동수송 뿐만 아니라 능동수송 방식에 의한 막 투과도 일어나며, 내강막(apical membrane) 및 측저막(basolateral membrane) 간 양방향의 수송이 모두 일어난다. 또한 장에 많이 발현되어 있으며 약물의 흡수를 저해하는 P-glycoprotein(P-gp) 및 breast cancer resistant protein (BCRP)와 같은 efflux transporter의 기질성 여부까지 판단할 수 있다(기질인 경우 Efflux ratio \> 2).  그러나 세포 배양 시 3주 이상이 소요되고, 시험 1주일 전 antibiotics-free media로 배양하는 과정 중 오염의 가능성도 있으며 시험 수행에 숙련된 기술이 필요하기 때문에 수행자나 기관에 따라 그 값의 편차가 심하다는 단점이 있다. 또한 Caco-2 세포주가 사람의 대장세포라 실제 약물의 흡수가 많이 이루어지는 소장과는 다소 차이가 있을 수 있다.
 
 ### MDCK cell-based permeability assay
 
-개의 신장에서 유래한 MDCK (Madin-Darby Canine Kidney) 세포주를 이용한 시험법으로, 소장 상피세포의 tight junction과 유사한 구조의 cell monolayer에서 약물의 투과도를 평가한다.  Caco-2와 마찬가지로 모든 투과 기전이 반영된 시험계로서, efflux transporter에 대한 기질성을 평가할 수 있다.  시험방법은 Caco-2 세포주를 이용하는 방법과 유사하지만, 일반적으로 3\~4일을 배양하면 cell monolayer가 형성되므로 보다 신속히 평가를 진행할 수 있다.  다만 내재된 transporter의 발현 수준이 낮아 특정 transporter가 과발현 되도록 만들어진 형질전환 세포주 (transfected cell line)의 형태로 많이 사용된다.  따라서 약물의 세포막 투과도 평가 외에도 여러 transporter에 대한 기질성 및 저해능 평가 시험에도 많이 활용되고 있다 (예: MDCK II-MDR1 cell line).
+개의 콩팥에서 유래한 MDCK(Madin-Darby Canine Kidney) 세포주를 이용한 시험법으로, 소장 상피세포의 tight junction과 유사한 구조의 cell monolayer에서 약물의 투과도를 평가한다.  Caco-2와 마찬가지로 모든 투과 기전이 반영된 시험계로서, efflux transporter에 대한 기질성을 평가할 수 있다.  시험방법은 Caco-2 세포주를 이용하는 방법과 유사하지만, 일반적으로 3\~4일을 배양하면 cell monolayer가 형성되므로 보다 신속히 평가를 진행할 수 있다.  다만 내재된 transporter의 발현 수준이 낮아 특정 transporter가 과발현 되도록 만들어진 형질전환 세포주(transfected cell line)의 형태로 많이 사용된다.  따라서 약물의 세포막 투과도 평가 외에도 여러 transporter에 대한 기질성 및 저해능 평가 시험에도 많이 활용되고 있다 (예: MDCK II-MDR1 cell line).
 
 ```{r 02-07, fig.cap = "(ref:02-07)"}
 knitr::include_graphics('media-02/image7.png')
@@ -203,9 +203,9 @@ Table: (\#tab:table02-01) 투과도 평가 시험 방법 별 특성 비교
 
 ## 투과도 평가 결과의 해석 및 활용
 
-앞서 설명한 *in vitro* 시험들을 통해 약물의 세포막 투과 계수를 산출할 수 있으며, 이를 토대로 그 약물의 소장에서의 흡수 정도를 예측하게 된다. 또한 *in vitro* 활성 시험에 있어서도 화합물이 세포 내 표적에 도달하여 약리 작용을 나타내기 위해서는 먼저 생체막을 투과해야 한다. 따라서 대다수의 제약사에서는 초기의 신약 탐색 단계 (drug discovery)부터 투과도 시험을 수행하여 후보물질을 선별하고 있다.
+앞서 설명한 *in vitro* 시험들을 통해 약물의 세포막 투과계수를 산출할 수 있으며, 이를 토대로 그 약물의 소장에서의 흡수 정도를 예측하게 된다. 또한 *in vitro* 활성 시험에 있어서도 화합물이 세포내 표적에 도달하여 약리작용을 나타내기 위해서는 먼저 생체막을 투과해야 한다. 따라서 대다수의 제약사에서는 초기의 신약 탐색단계(drug discovery)부터 투과도시험을 수행하여 후보물질을 선별하고 있다.
 
-특히 Caco-2 세포주를 이용한 약물의 투과도는 사람의 소장 내 약물의 흡수율과 높은 상관성을 보이는 것으로 보고되어 있다 (그림 \@ref(fig:02-08)). FDA의 '생물약제학적 분류체계 (Biopharmaceutics Classification System, BCS)' 가이드라인^6^에 따르면, 약물의 용해도 및 장관 투과도에 근거하여 약물 성분을 분류하기 위해서는 약물의 세포막 투과 계수가 필요한데 이 때 사람에서 유래한 Caco-2 세포주를 이용한 약물의 투과도 평가 결과를 활용하도록 권고하고 있다. 또한 Caco-2 세포주를 이용한 약물의 투과도는 사람의 흡수속도상수 (absorption rate constant, *k*~a~)를 예측하는 데에도 활용될 수 있다.
+특히 Caco-2 세포주를 이용한 약물의 투과도는 사람의 소장 에서 약물의 흡수율과 높은 상관성을 보인다(그림 \@ref(fig:02-08)). FDA의 '생물약제학적 분류체계 (Biopharmaceutics Classification System, BCS)' 가이드라인^6^에 따르면, 약물의 용해도 및 장관 투과도에 근거하여 약물 성분을 분류하기 위해서는 약물의 세포막 투과 계수가 필요한데 이 때 사람에서 유래한 Caco-2 세포주를 이용한 약물의 투과도 평가 결과를 활용하도록 권고하고 있다. 또한 Caco-2 세포주를 이용한 약물의 투과도는 사람의 흡수속도상수(absorption rate constant, *k*~a~)를 예측하는 데에도 활용될 수 있다.
 
 ```{r 02-08, fig.cap = "(ref:02-08)"}
 knitr::include_graphics('media-02/image8.png')
@@ -213,11 +213,11 @@ knitr::include_graphics('media-02/image8.png')
 
 (ref:02-08) Caco-2 투과도와 사람 소장 흡수율 간의 상관 관계
 
-PAMPA 시험의 경우 투과도 결과를 해석하기 위한 절대적인 기준은 없으며 시험기관 혹은 시험자마다 상이하다. 실무에서 흔히 사용되는 기준을 소개하면, PAMPA 시험 결과 투과 계수 (P~e~)가 10\*10^-6^ cm/sec 이상이면 투과도가 높은 약물로 분류하는 경우가 많다. 그러나 P~e~ 값이 10\*10^-6^ cm/sec 이하인 경우라 할지라도 경구용 약물로 개발이 불가한 것은 아니며, 1\*10^-6^ cm/sec 이상의 약물이면 경구용 약물로 개발 가능한 수준으로 판단하는 경우도 있다.
+PAMPA 시험의 경우 투과도 결과를 해석하기 위한 절대적인 기준은 없으며 시험기관 혹은 시험자마다 상이하다. 실무에서 흔히 사용되는 기준을 소개하면, PAMPA 시험 결과 투과 계수 (P~e~)가 10\*10^-6^ cm/sec 이상이면 투과도가 높은 약물로 분류하는 경우가 많다. 그러나 P~e~ 값이 10\*10^-6^ cm/sec 이하인 경우라 할지라도 경구용 약물로 개발이 불가한 것은 아니며, 1\*10^-6^ cm/sec 이상의 약물이면 경구용 약물로 개발가능한 수준으로 판단하는 경우도 있다.
 
-Caco-2 시험에서 산출된 Apical to Basolateral 방향의 겉보기 투과계수 (P~app,~ A to B)는 동일한 시험 배치에서 평가한 기준 약물 (reference drug)의 결과를 기반으로 시험 약물의 투과도가 높거나 중간 수준 혹은 낮다고 분류한다. 여기서 기준 약물이란 위에서 언급한 FDA의 가이드라인에 명시되어 있는 약물로서, 사람 소장에서의 흡수 분율 (fraction of human intestinal absorption; f~a~)에 따라 high (≥85%), moderate (50 - 84%), low (\<50%) 및 zero-permeable 약물로 분류되어 있다. 보다 정확한 결과 해석을 위해서는 시험 약물과 더불어 high 및 low-permeable 기준 약물을 1종씩 선택하여 함께 평가를 수행하는 것이 바람직하다. 그리고 앞서 언급했지만, 세포주를 이용한 투과도 평가 시 efflux ratio가 2 이상이면 시험 약물이 해당 세포주에 발현된 efflux transporter의 기질성이 있다고 판단한다.
+Caco-2 시험에서 산출된 apical to basolateral 방향의 겉보기 투과계수(P~app,~ A to B)는 동일한 시험 배치에서 평가한 기준 약물(reference drug)의 결과를 기반으로 시험 약물의 투과도가 높거나 중간 수준 혹은 낮다고 분류한다. 여기서 기준 약물이란 위에서 언급한 FDA의 가이드라인에 명시되어 있는 약물로서, 사람 소장에서의 흡수 분율 (fraction of human intestinal absorption; f~a~)에 따라 high (≥85%), moderate (50 - 84%), low (\<50%) 및 zero-permeable 약물로 분류되어 있다. 보다 정확한 결과 해석을 위해서는 시험 약물과 더불어 high 및 low-permeable 기준 약물을 1종씩 선택하여 함께 평가를 수행하는 것이 바람직하다. 그리고 앞서 언급했지만, 세포주를 이용한 투과도 평가 시 efflux ratio가 2 이상이면 시험 약물이 해당 세포주에 발현된 efflux transporter의 기질일 가능성이 있다고 판단한다.
 
-시험약물이 어떤 efflux transporter의 기질인지를 판단하려면, 평가하고자 하는 transporter의 알려진 기질 및 저해제를 처리하였을 때 시험 약물의 투과도 평가 결과가 어떻게 나타나는지를 확인하여야 한다. 다음 표 \@ref(tab:caco-2-pgp)의 예시와 같이, P-gp에 대한 기질성을 판단하기 위해서는 P-gp의 기질인 Talinolol과 저해제인 Verapamil 등을 이용하여 투과도 시험을 수행하여야 한다. 평가 결과를 보면 Test drug A는 알려진 P-gp의 기질인 Talinolol과 유사한 결과를 나타내었다. 즉 efflux ratio가 2 이상이면서 저해제인 Verapamil을 함께 처리 시 apical to basolateral 방향의 P~app~ 값이 2배 이상 증가한 것을 확인할 수 있다. 그 결과 저해제를 처리한 경우의 efflux ratio가 44.4로서 처리하지 않았을 때보다 2배 이상 감소하였다. 따라서 Test drug A는 P-gp의 기질인 것으로 판단된다. 반면 Test drug B는 efflux ratio가 모두 2 이하이고, 저해제 처리 유무에 따라 P~app~ 및 efflux ratio가 변하지 않고 일정한 값으로 산출되었다. 그러므로 Test drug B는 P-gp의 기질이 아니며, P-gp 외 Caco-2 세포주에 발현된 다른 efflux transporter의 기질도 아닌 것으로 해석된다.
+시험약물이 어떤 efflux transporter의 기질인지를 판단하려면, 평가하고자 하는 transporter의 알려진 기질 및 저해제를 처리하였을 때 시험 약물의 투과도 평가 결과가 어떻게 나타나는지를 확인하여야 한다. 다음 표 \@ref(tab:caco-2-pgp)의 예시와 같이, P-gp에 대한 기질성을 판단하기 위해서는 P-gp의 기질인 talinolol과 저해제인 verapamil 등을 이용하여 투과도 시험을 수행하여야 한다. 평가 결과를 보면 test drug A는 알려진 P-gp의 기질인 talinolol과 유사한 결과를 나타내었다. 즉 efflux ratio가 2 이상이면서 저해제인 verapamil을 함께 처리 시 apical to basolateral 방향의 P~app~ 값이 2배 이상 증가한 것을 확인할 수 있다. 그 결과 저해제를 처리한 경우의 efflux ratio가 44.4로서 처리하지 않았을 때보다 반 이하로 감소하였다. 따라서 Test drug A는 P-gp의 기질인 것으로 판단된다. 반면 Test drug B는 efflux ratio가 모두 2 이하이고, 저해제 처리 유무에 따라 P~app~ 및 efflux ratio가 변하지 않고 일정한 값으로 산출되었다. 그러므로 Test drug B는 P-gp의 기질이 아니며, P-gp 외 Caco-2 세포주에 발현된 다른 efflux transporter의 기질도 아닌 것으로 해석된다.
 
 
 (ref:caco-2-pgp) Caco-2 세포주를 이용한 P-gp 기질성 평가 예시
@@ -249,7 +249,7 @@ A:\ apical,&\ B:\ basolateral
 (\#eq:eq02-03)
 \end{equation}
   
-만약 어떤 약물의 투과도를 평가하였을 때 배양액 내 약물의 농도가 낮아서 low-permeable한 약물로 분류되었으나 동시에 회수율이 매우 낮다면, 결과를 해석함에 있어 정말 약물의 투과도가 낮았던 것인지 혹은 다른 원인에 의해 약물이 소실되어 배양액 내 잔존하지 않았던 것인지를 구별하기 어렵다.
+만약 어떤 약물의 투과도를 평가하였을 때 배양액 내 약물의 농도가 낮아서 low-permeable한 약물로 분류되었으나 동시에 회수율이 매우 낮다면, 결과를 해석함에 있어 정말 약물의 투과도가 낮았던 것인지 아니면 다른 원인에 의해 약물이 소실되어 배양액에 남아있지 않았던 것인지를 구별하기 어렵다.
 따라서 적어도 75% 이상의 회수율이 확인되어야 해당 시험계에서 산출된 투과도 값에 신뢰성이 있다고 판단할 수 있으며, 회수율이 낮은 경우 그 원인으로는 다음과 같은 사항이 포함된다.
 
 -   Non-specific binding of test compound to plastic material 
@@ -257,13 +257,13 @@ A:\ apical,&\ B:\ basolateral
 -   Instability of test compound in the media (*i.e.*, due to the metabolism in cell)
 -   Accumulation of test compound in the cell monolayer
 
-이 중 배양액 내 약물이 실험 제품의 plastic ware에 비특이적 결합(non-specific binding)을 하는 경우에는 배양액에 bovine serum을 첨가하여 약물이 plastic 대신 bovine serum과 결합하도록 한 다음 약물을 추출하거나 혹은 plastic material과 비특이적으로 결합한 약물을 유기용매로 wash out하여 추출하여 그 농도를 분석함으로써 낮은 회수율을 개선시키는 방법이 있다.
+이 중 배양액 내 약물이 실험 제품의 plastic ware에 비특이적 결합(non-specific binding)을 하는 경우에는 배양액에 bovine serum을 첨가하여 약물이 plastic 대신 bovine serum과 결합하도록 한 다음 약물을 추출하거나 plastic material과 비특이적으로 결합한 약물을 유기용매로 wash out하여 추출하여 그 농도를 분석함으로써 낮은 회수율을 개선시키는 방법이 있다.
 
 ## 맺음말
 
-이상으로 ADME의 기초자료: physicochemical properties에서 투과도에 대해 알아보았다. 
-투과도는 약물의 흡수와 관련된 주요 인자 중 하나이므로, 신약 개발 초기의 후보물질 탐색 시 물질 스크리닝을 위한 평가 항목으로 여겨진다. 
-그 외에도 사람에서의 약물 흡수를 예측하거나 efflux transporter와의 상호작용 연구 시 활용될 수 있다. 
+ 
+투과도는 약물의 흡수와 관련된 주요 인자 중 하나이므로, 신약개발 초기의 후보물질 탐색 시 물질 스크리닝을 위한 평가 항목으로 여겨진다. 
+그 외에도 사람에서의 약물흡수를 예측하거나 efflux transporter와의 상호작용 연구 시 활용될 수 있다. 
 앞서 설명한 바와 같이 투과도를 평가하기 위한 *in vitro* 시험은 다양하므로, 각 시험의 특성을 이해하고 평가하고자 하는 목적, 개발 단계 등에 따라 적절한 시험을 선택하여야 하겠다. 
 뿐만 아니라 원하는 결과를 얻을 수 있도록 시험을 잘 설계하고, 데이터를 정확히 해석하는 것 역시 중요하다.
 
