--- a/04.Rmd
+++ b/04.Rmd
@@ -433,7 +433,7 @@ knitr::include_graphics('media-04/image29.png')
 전, 후보물질의 대사 특성을 잘 파악하고 질 높은 정량적인 파라미터들을
 확보해 두는 것은 임상개발 과정에서 시간과 비용을 줄이는데 중요한 역할을
 할 수 있다. 대사 평가 데이터는 임상진입을 위한 허가기관 제출 자료로
-확보되어야 하며, 그 외, 임상 진입 후, PBPK 모델 개발에 필수적으로
+확보해야 하며, 그 외, 임상진입 후, PBPK 모델 개발에 필수적으로
 활용되어, 병용약물과의 약동학적 상호작용 평가, 다양한 환자군(예. 간 및
 신장 기능 저하 환자군, 등)에서의 약동학 평가, 및 인종간의 약동학 차이
 등의 평가에 사용될 수 있다.
