--- a/04.Rmd
+++ b/04.Rmd
@@ -22,7 +22,7 @@ height="4.859154636920385in"} -->
 knitr::include_graphics('media-04/image1.png')
 ```
 
-(ref:04-01) 아세트아미노펜의 대사과정. (위키피디아 NAPQI 검색 후, 발췌)
+(ref:04-01) 아세트아미노펜의 대사과정. (출처: 위키피디아)
 
 대사 과정에는 phase I 대사와 phase II 대사가 있으며, 각각의 과정에 관여하는 대사 효소의 종류와 생성되는 대사체의 성질도 다르다. 일반적으로 phase I 대사를 통해 약물은 산화, 환원, 또는 가수분해 등의 반응을 거치게 되고, 이로 인해 배설 및 다음 대사과정에 용이한 작용기를 가지게 되고, 반응성이 증가하게 된다. 그리고 phase II 대사를 통해 glucuronide, sulfate 등의 포합체가 생성되어 수용성이 증가하게 되며, 신장이나 담즙을 통해 배설되게 된다. 일반적으로 phase I → phase II 대사를 순차적으로 거쳐 약물이 체외로 배설된다고 알려져 있으나, 약물의 구조와 작용기의 유무에 따라 phase I 대사 또는 phase II 대사를 거치거나, phase II 대사 이후 phase I 대사과정을 거치는 등 다양한 방법으로 변환되어 체외 배설된다. 
 
