--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -136,6 +136,16 @@
   publisher={Springer}
 }
 
+@article{varma2017extended,
+  title={Extended Clearance Classification System (ECCS) informed approach for evaluating investigational drugs as substrates of drug transporters},
+  author={Varma, MV and El-Kattan, AF and Feng, B and Steyn, SJ and Maurer, TS and Scott, DO and Rodrigues, AD and Tremaine, LM},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={102},
+  number={1},
+  pages={33--36},
+  year={2017}
+}
+
 @article{kenna2020sc1,
   title={SC1. 4-Can BSEP inhibition testing in drug discovery and development reduce liver injury risk? An international transporter consortium perspective},
   author={Kenna, Gerry},
